...
        android:text="powered by static0"
        android:textSize="14sp"
        android:textColor="@color/textPrimary"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#3E50B4"
        android:visibility="gone"
        android:text="Log in"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/button_color"
        android:textColor="@color/button_text_color"/>

</LinearLayout>
