...
        android:background="#BDBDBD"

        />

    <!-- Event view for Admin -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/adminEventView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="12dp" />

    <!-- Footer divider -->
...
