...
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <!-- User Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="User"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_margin="12dp"
            android:background="@drawable/button_color"
            android:textColor="@color/button_text_color"/>

...
            android:layout_margin="12dp"
            android:background="@drawable/button_color"
            android:textColor="@color/button_text_color"/>

        <!-- Admin Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAdmin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Admin"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_margin="12dp"
...
